# mtg_card_generator

./: .gitignore  AGENTS.md  Cargo.toml  SPEC.md  TODO.md  flake.nix
.opencode/agent/: card-eval.md  card-fixer.md
scripts/: fix-card.sh
src/: card.css  card.rs  lib.rs  main.rs  mana.rs  render.rs  utils.rs
tests/: mana.rs  parsing.rs
tests/fixtures/: adventure.yaml  battle.yaml  class.yaml  flip.yaml  leveler.yaml  modal_dfc.yaml  normal_creature.yaml  planeswalker.yaml  prototype.yaml  saga.yaml  split.yaml  transform.yaml
